# SongEval

./: .gitignore  MANIFEST.in  eval.py  pyproject.toml  requirements.txt
SongEval/: config.yaml  eval.py
